refactor(structure): improve markdown generation and table creation logic for better table embedding